# python-calculator

./: horse_plinko.md  requirements.txt  setup.cfg
.github/workflows/: test-python-package.yaml
pythoncalculator/: __init__.py  add.py  divide.py  horse.py  multiply.py  subtract.py
tests/: test_divide.py  tets_subtract.py
