[metadata]
name = pythoncalculator
version = 0.0.2
author = Tild Resare
author_email =  tjsresare1@sheffield.ac.uk
description = Perform basic calculations in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/meja0>/python-calculator
project_urls =
    Bug Tracker = https://github.com/meja0/python-calculator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
